; ModuleID = '/home/carl/AnghaBench/linux/fs/dlm/extr_lock.c_do_unlock.c'
source_filename = "/home/carl/AnghaBench/linux/fs/dlm/extr_lock.c_do_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_rsb = type { i32 }
%struct.dlm_lkb = type { i32 }

@DLM_EUNLOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dlm_rsb*, %struct.dlm_lkb*)* @do_unlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_unlock(%struct.dlm_rsb* %0, %struct.dlm_lkb* %1) #0 {
  %3 = alloca %struct.dlm_rsb*, align 8
  %4 = alloca %struct.dlm_lkb*, align 8
  store %struct.dlm_rsb* %0, %struct.dlm_rsb** %3, align 8
  store %struct.dlm_lkb* %1, %struct.dlm_lkb** %4, align 8
  %5 = load %struct.dlm_rsb*, %struct.dlm_rsb** %3, align 8
  %6 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %7 = call i32 @remove_lock(%struct.dlm_rsb* %5, %struct.dlm_lkb* %6)
  %8 = load %struct.dlm_rsb*, %struct.dlm_rsb** %3, align 8
  %9 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %10 = load i32, i32* @DLM_EUNLOCK, align 4
  %11 = sub nsw i32 0, %10
  %12 = call i32 @queue_cast(%struct.dlm_rsb* %8, %struct.dlm_lkb* %9, i32 %11)
  %13 = load i32, i32* @DLM_EUNLOCK, align 4
  %14 = sub nsw i32 0, %13
  ret i32 %14
}

declare dso_local i32 @remove_lock(%struct.dlm_rsb*, %struct.dlm_lkb*) #1

declare dso_local i32 @queue_cast(%struct.dlm_rsb*, %struct.dlm_lkb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
